--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: darkslategray;
-  color: white;
+  color: black;
 }
 
 h1 {
@@ -13,15 +13,15 @@ h1 {
 
 @media only screen and (min-width: 500px) {
   body {
-    background-color: darkslategrey;
-    color:darkslategrey;
+    background-color: darksalmon;
+    color:black;
   }
 }
 
 @media only screen and (min-width: 800px) {
   body {
-    background-color: white;
-    color: darkslategrey;
+    background-color: darkslateblue;
+    color: black;
   }
 }
 
